--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "pnpm rspack build",
     "dev": "pnpm rspack dev",
-    "start": "node build/main.js"
+    "start": "node build/main.js",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -25,13 +26,17 @@
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@rspack/cli": "^1.6.6",
     "@rspack/core": "^1.6.6",
     "@types/express": "^5.0.6",
     "@types/node": "^24.10.1",
     "@types/webpack-node-externals": "^3.0.4",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
     "run-script-webpack-plugin": "^0.2.3",
     "ts-checker-rspack-plugin": "^1.2.1",
+    "typescript-eslint": "^8.49.0",
     "webpack-node-externals": "^3.0.0"
   }
 }
