--- a/shared/package.json
+++ b/shared/package.json
@@ -1,11 +1,10 @@
 {
   "name": "shared",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -14,5 +13,11 @@
   "volta": {
     "node": "22.21.1",
     "pnpm": "10.21.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
+    "typescript-eslint": "^8.49.0"
   }
 }
