--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+coverage
+.nyc_output
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 pids
 *.pid
