--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "pnpm rspack build",
-    "dev": "pnpm rspack dev",
+    "build": "rspack build",
+    "dev": "rspack dev",
     "start": "node build/main.js",
+    "test": "jest --passWithNoTests",
     "lint": "eslint ."
   },
   "keywords": [],
@@ -27,14 +28,21 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@nestjs/testing": "^11.1.9",
     "@rspack/cli": "^1.6.7",
     "@rspack/core": "^1.6.7",
-    "@types/express": "^5.0.6",
+    "@swc/core": "^1.15.3",
+    "@swc/jest": "^0.2.39",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.10.2",
+    "@types/supertest": "^6.0.3",
     "@types/webpack-node-externals": "^3.0.4",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
+    "jest": "^30.2.0",
     "run-script-webpack-plugin": "^0.2.3",
+    "supertest": "^7.1.4",
     "ts-checker-rspack-plugin": "^1.2.1",
     "typescript-eslint": "^8.49.0",
     "webpack-node-externals": "^3.0.0"
