--- a/shared/package.json
+++ b/shared/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest --passWithNoTests",
     "lint": "eslint ."
   },
   "keywords": [],
@@ -16,8 +17,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@swc/core": "^1.15.3",
+    "@swc/jest": "^0.2.39",
+    "@types/jest": "^30.0.0",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
+    "jest": "^30.2.0",
     "typescript-eslint": "^8.49.0"
   }
 }
