render.yml refined

--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -2,11 +2,9 @@ name: Render
 
 on:
   push:
-    branches:
-      - master
+    branches: [master]
   pull_request:
     branches: [master]
-    types: [opened, synchronize]
 
 jobs:
   full:
