--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -21,8 +21,8 @@
     "baseUrl": "..",
     "paths": {
       "@/*": ["backend/src/*"],
-      "@shared/*": ["shared/src/*"]
-    }
+      "@shared/*": ["shared/src/*"],
+    },
   },
-  "include": ["src"]
+  "include": ["src"],
 }
