--- a/shared/package.json
+++ b/shared/package.json
@@ -1,19 +1,10 @@
 {
   "name": "shared",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "jest --passWithNoTests",
     "lint": "eslint ."
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.21.0",
-  "volta": {
-    "node": "22.21.1",
-    "pnpm": "10.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -24,5 +15,10 @@
     "globals": "^16.5.0",
     "jest": "^30.2.0",
     "typescript-eslint": "^8.49.0"
-  }
+  },
+  "volta": {
+    "node": "22.21.1",
+    "pnpm": "10.21.0"
+  },
+  "packageManager": "pnpm@10.21.0"
 }
